# FinalTaller

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DocumentacionTecnica.md  ManualDeProyecto.md  Paquete.md  Paquetes.md  Preguntas.md  README.md  TODO cliente.md  gitear.sh  paquetes.txt  preentrega.md  referenciasExternas.md  todoCliente.md
Diagramas ALGO3/: Ideas reciclables.md  TP2_class_diagrams.asta
SonidoXML/: CharacterHUD.cpp  CharacterHUD.h  Reproductor.cpp  SeleccionadoHUD.cpp  SeleccionadoHUD.h  main.cpp  stats.xml
VistasSDL/: Camara.cpp  Camara.h  Elemento.cpp  Elemento.h  ElementoBandera.cpp  ElementoFuerte.cpp  ElementoFuerte.h  ElementoPuente.cpp  ElementoPuente.h  ElementoRobot.cpp  ElementoRobot.h  ElementoRoca.cpp  ElementoRoca.h  ElementoTanque.cpp  ElementoTanque.h  ElementoUnidad.cpp  ElementoUnidad.h  LTexture.cpp  LTexture.h  LTimer.cpp  LTimer.h  Mouse.cpp  Mouse.h  SelectBox.h  Tile.cpp  Tile.h  Vista.cpp  Vista.h  VistaAnimada.cpp  VistaAnimada.h  VistaBandera.cpp  VistaDireccionada.cpp  VistaDireccionada.h  VistaMuerteRobot.cpp  VistaMuerteRobot.h  VistaMuerteTanque.cpp  VistaPuente.cpp  VistaPyroDisparar.cpp  VistaPyroDisparar.h  VistaRoca.cpp  (+7 more)
a*/: AEstrella.cpp  AEstrella.h  server_AEstrella.cpp  server_Mapa.cpp  server_Mapa.h  server_Posicion.h
animaciones/: Makefile  animacion.cpp
animaciones/movimiento/: animacion.cpp
client/: Boton.cpp  Boton.h  Camara.cpp  Canvas.cpp  CanvasException.cpp  Click.cpp  Client.cpp  CodigosPaquete.cpp  ColaPaquetes.cpp  ColaPaquetesVieja.cpp  ColaSalida.cpp  ColaSalida.h  ColectorDeAcciones.cpp  CreadorMapa.cpp  CreadorMapa.h  Elemento.cpp  ElementoBala.cpp  ElementoBandera.cpp  ElementoColoreado.cpp  ElementoEstructura.cpp  ElementoFuerte.cpp  ElementoGui.cpp  ElementoGui.h  ElementoManager.cpp  ElementoPuente.cpp  ElementoRoca.cpp  ElementoUnidad.cpp  ErrorMonitor.cpp  ErrorMonitor.h  Greeter.cpp  GuiEdificio.cpp  GuiFabrica.cpp  Hud.cpp  IconoArma.cpp  IconoArma.h  IconoRobot.cpp  IconoRobot.h  IconoVehiculo.cpp  IconoVehiculo.h  LTimer.cpp  (+35 more)
client/Elementos/: Elemento.cpp  ElementoBala.cpp  ElementoBandera.cpp  ElementoColoreado.cpp  ElementoEstructura.cpp  ElementoFuerte.cpp  ElementoPuente.cpp  ElementoRobot.cpp  ElementoRoca.cpp  ElementoTanque.cpp  ElementoUnidad.cpp  Tile.cpp
client/Header Files/: ArmaGallery.h  Boton.h  Camara.h  Canvas.h  CanvasException.h  Click.h  ColaPaquetes.h  ColaPaquetesVieja.h  ColaSalida.h  ColectorDeAcciones.h  CreadorMapa.h  Elemento.h  ElementoBala.h  ElementoBandera.h  ElementoColoreado.h  ElementoEstructura.h  ElementoFuerte.h  ElementoManager.h  ElementoPuente.h  ElementoRobot.h  ElementoRoca.h  ElementoTanque.h  ElementoUnidad.h  FactoryGallery.h  Greeter.h  GuiEdificio.h  GuiFabrica.h  GuiGallery.h  Hud.h  Logger.h  Mapa.h  Mouse.h  Paquete.h  PaqueteAccion.h  PaqueteDelivery.h  PaqueteFabrica.h  PaqueteReceiver.h  PaqueteSender.h  PaqueteTransporte.h  PaqueteUnidad.h  (+56 more)
client/SonidoXML/: GeneradorMapa.cpp  GeneradorMapa.h  SeleccionadoHUD.cpp  main.cpp  mapa.map
client/Vistas/: Texture.cpp  Vista.cpp  VistaBala.cpp  VistaBandera.cpp  VistaColoreada.cpp  VistaColoreada.h  VistaDireccionada.cpp  VistaFabricaRobot.cpp  VistaFabricaVehiculo.cpp  VistaFuerte.cpp  VistaGui.cpp  VistaHeavyCaminar.cpp  VistaHeavyDisparar.cpp  VistaHudCaras.cpp  VistaHudRobotLabels.cpp  VistaHudVehiculoLabels.cpp  VistaHudVehiculos.cpp  VistaIconoArma.cpp  VistaIconoRobot.cpp  VistaIconoVehiculo.cpp  VistaLabelFabrica.cpp  VistaLabelRobot.cpp  VistaLabelVehiculo.cpp  VistaLaserDisparar.cpp  VistaMediumCaminar.cpp  VistaMediumDisparar.cpp  VistaProgressBar.cpp  (+7 more)
common/: common_SocketException.cpp
doc/: DocumentacionTecnica.md  ManualDeProyecto.md  ManualDelUsuario.md  Paquete.md  Preguntas.md  paquetes.txt
generadorMapa/: GeneradorMapa.cpp  GeneradorMapa.h  configuracion.xml  main.cpp  mapa.map  mostrar_mapa.py
nbproject/: configurations.xml  project.xml
server/: AEstrella.cpp  AEstrella.h  Bandera.cpp  Bandera.h  Bloque.cpp  Bloque.h  BoolProtected.cpp  Casillero.cpp  Casillero.h  ColaMensajes.cpp  ColaMensajes.h  Edificio.cpp  Edificio.h  EnviadorDeMensajes.cpp  EnviadorDeMensajes.h  FabricaEdificios.cpp  FabricaEdificios.h  FabricaInmovibles.cpp  FabricaInmovibles.h  FabricaMuniciones.cpp  FabricaMuniciones.h  FabricaRobots.cpp  FabricaRobots.h  FabricaTerrenos.cpp  FabricaTerrenos.h  FabricaUnidades.cpp  FabricaUnidades.h  FabricaVehiculos.cpp  FabricaVehiculos.h  Inmovible.cpp  Inmovible.h  Juego.cpp  Juego.h  Jugador.cpp  Jugador.h  Logger.cpp  Logger.h  ManejadorIDs.cpp  ManejadorIDs.h  Mapa.cpp  (+83 more)
(+208 files in other folders)
